# modules/Backend/Http/Controllers/API/Auth/LoginController.php
@@ -1,0 +1,81 @@
+<?php
+/**
+ * JUZAWEB CMS - The Best CMS for Laravel Project
+ *
+ * @package    juzaweb/juzacms
+ * @author     The Anh Dang <dangtheanh16@gmail.com>
+ * @link       https://juzaweb.com/cms
+ * @license    MIT
+ */
+
+namespace Juzaweb\Backend\Http\Controllers\API\Auth;
+
+use Illuminate\Support\Facades\Auth;
+use Juzaweb\Backend\Http\Requests\API\Auth\LoginRequest;
+use Juzaweb\CMS\Http\Controllers\ApiController;
+
+class LoginController extends ApiController
+{
+    /**
+     * @OA\Post(
+     *      path="/api/auth/login",
+     *      tags={"Auth"},
+     *      summary="User login",
+     *      operationId="api.auth.login",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\MediaType(
+     *              mediaType="multipart/form-data",
+     *              @OA\Schema(
+     *                  required={"email","password"},
+     *                  @OA\Property(property="email",
+     *                      type="string",
+     *                      example="string@gmail.com",
+     *                      description="email"
+     *                  ),
+     *                  @OA\Property(property="password",
+     *                      type="string",
+     *                      example="string",
+     *                      description="password"
+     *                  )
+     *              )
+     *          )
+     *      ),
+     *      @OA\Response(response=201, ref="#/components/responses/success_detail"),
+     *      @OA\Response(response=422, ref="#/components/responses/error_422"),
+     *      @OA\Response(response=500, ref="#/components/responses/error_500")
+     *  )
+     */
+    public function login(LoginRequest $request)
+    {
+        $request->authenticate();
+    
+        $token = $request->user()->createToken('user');
+
+        return $this->respondWithToken($token);
+    }
+
+    public function refresh()
+    {
+        return $this->respondWithToken(Auth::guard('api')->refresh());
+    }
+
+    public function logout()
+    {
+        Auth::guard('api')->logout();
+
+        return $this->restSuccess([], 'Successfully logged out');
+    }
+
+    protected function respondWithToken($token)
+    {
+        return $this->restSuccess(
+            [
+                'access_token' => $token->plainTextToken,
+                'token_type' => 'bearer',
+                //'expires_in' => Auth::guard('api')->factory()->getTTL() * 60,
+            ],
+            'Successfully login'
+        );
+    }
+}
